<resources>
    <string name="app_name">Intruder Alert - Who Touched</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emptyIntrusion">No Intruder Found</string>
    <string name="Add_Widget">Easily check the intruders right from  your home screen</string>
    <string name="Alarm">Alarm</string>
    <string name="turn_on">Turn On</string>
    <string name="intruder">Intruder </string>
    <string name="Fingerprint_lock_text">Fingerprint Lock</string>
    <string name="description">Enable fingerprint to protect your app from unauthorized access.</string>
    <string name="enable_now">Enable Now</string>
    <string name="fgNotificationTitle">Third Eye is Active</string>
    <string name="fgNotifictaionText">Watching for Intrusions\n</string>
    <string name="IntrusionNotificationTitle">Intrusion Detected!</string>
    <string name="intruderNotifiationText">SomeoneTried To Unlock Your Phone Check Out!</string>
    <string name="finger_print_lock">Finger Print Lock</string>
    <string name="protect_app_from_intruders">Protect App From Intruders</string>
    <string name="advance">Advance</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="manage_subscriptions">Manage Subscriptions</string>
    <string name="your_plan_billing_and_renewal_info">Your plan ,billing and renewal info</string>
    <string name="general">General</string>
    <string name="intruder_selfie">Intruder Selfie</string>
    <string name="take_photos_after_01_wrong_attempts">Take Photos after 01 wrong attempts</string>
    <string name="picture_delay">Picture Delay</string>
    <string name="delayText">Setting this value to less than 1000ms may cause .</string>
    <string name="widget_setup">Widget Setup</string>
    <string name="add_widget">Add Widget</string>
    <string name="how_to_add_widget">How to add widget?</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="intruders">Intruders</string>
    <string name="not_intruder_found">Not Intruder Found</string>
    <string name="emptydescription">if someone tries to open we will </string>
    <string name="alarmtitle">Enable Audible Alarm</string>
    <string name="attempt">Get loud alert on wrong attempt</string>
    <string name="select_alarm">Select Alarm</string>
    <string name="beep">Beep</string>
    <string name="configuration">Configuration</string>
    <string name="audible_alarm">Audible Alarm</string>
    <string name="permissions">Set Up Permissions</string>
    <string name="permdescription">To enable Intruder Alert, please allow access to the following:</string>
    <string name="allow">Allow</string>
    <string name="unlock_app">Unlock App</string>
    <string name="bioMetricError">Authentication error </string>
    <string name="biometricDescription">User Your Finger Prints To Unlock the App</string>
    <string name="noBMHA">No biometric hardware available</string>
    <string name="noBmh">Device Has no Biometric Hardware</string>
    <string name="addFingerPrint">Biometric authentication is not set up. You can enable it from your device settings</string>
    <string name="history">History</string>
    <string name="seewho">See who tried to unlock Your phone</string>
    <string name="addTitle">Add Intruder Widget Now</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="noIntdes">It looks like there is problem with your Internet Connection Please Check your Network</string>
    <string name="get_started">Get Started</string>
    <string name="selected_ringtone">Select Intrusion Ringtone</string>
    <string name="lockeImg">Limit Reached.You can view only 3 intruders for free</string>
    <string name="emptyIntruders">No Intruders Found</string>
    <string name="settings">Settings</string>
    <string name="delete_description">Are you sure you want to permanently delete this?</string>
    <string name="delete_photo">Delete Photo?</string>
    <string name="delete">Delete</string>
    <string name="no_intrusions">No Intrusions</string>
    <string name="enjoy">Enjoy All Features Ads Free,Unlimited</string>
    <string name="adfre">Enjoy 100% ads free experience</string>
    <string name="unlimited">Unlimited Intruder Detection</string>
    <string name="hide">Hide App behind smart fake icons</string>
    <string name="sub">Auto renewable ,Cancel anytime before 24 hours subscription ends</string>
    <string name="limit">Set wrong attempts limit to capture intruder images</string>
    <string name="safa">Confirm your identity using your figner print to unlock app safely and quickly</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="upgrade_premium">Upgrade Premium</string>
    <string name="turn_on_btn">Turn On</string>
    <string name="apply">Apply</string>
    <string name="please_wait">Please Wait</string>
    <string name="intruder_attempts">Intruder Selfie</string>
    <string name="notificPerm">Notification Permission </string>
    <string name="cameraPerm">Camera permission</string>
    <string name="adminPerm">Administrator Access Needed</string>
    <string name="notifDesc">Get instant alerts when an intrusion attempt or important security event is detected.</string>
    <string name="camreaDes">Used only to capture an intruder’s photo after an incorrect password attempt. Photos stay securely inside the app..</string>
    <string name="imagesDesc">We need storage access to save intruder images.</string>
    <string name="adminPermDesc">Administrator access is required.</string>
    <string name="permission_default_title">Permission Required.</string>
    <string name="active">Active</string>
    <string name="turn_on_text">Turn On</string>
    <string name="continue_btn_text">Continue</string>
    <string name="term_of_service">Term of service</string>
    <string name="detail">Detail</string>
    <string name="policy_terms_html"><![CDATA[
Please read <a href="https://yourwebsite.com/privacy"><u>Privacy Policy</u></a> and <a href="https://yourwebsite.com/terms"><u>Terms of Service</u></a> before starting
]]></string>
    <string name="adfree">Enjoy 100% Ad-Free Experience</string>
    <string name="wait">Delay A millisecond to wait before taking a picture</string>
    <string name="delay">Picture Delay</string>
    <string name="confirmdesc">Confirm your identity using your fingerprint to unlock now safely and quickly.</string>
    <string name="unlock">Fingerprint Unlock</string>
    <string name="cancel">Cancel</string>
    <string name="howto">How to add widget?</string>
    <string name="add_now">Add Now</string>
    <string name="add_widget_title">Add Widget</string>
    <string name="grantall">Please grant all required permissions</string>
    <string name="applied">Applied</string>
    <string name="icons">Icons</string>
    <string name="exit_app">Exit App</string>
    <string name="tap_again_to_exit">Tap again to exit</string>
    <string name="no">NO</string>
    <string name="yes">Yes\n</string>
    <string name="biometric_unavailable_title">Biometric unavailable</string>
    <string name="applying_new_icon">Applying New Icon</string>
    <string name="congratulation">Congratulation</string>
    <string name="success_des">Icon changed successfully</string>
    <string name="start">Start</string>
    <string name="icon_camouflage">Icon Camouflage</string>
    <string name="intruder_alert">Intruder Alert</string>
    <string name="week_1">week</string>
    <string name="watch_ad_to_unlock">Watch Ad to Unlock</string>
    <string name="unlock_now">Unlock Now</string>
    <string name="selfie_will_be_taken_after_wrong_tries">Selfie will be taken after %1$d wrong tries</string>
    <string name="current_delay_is_setting_this_value_to_less_than_1000ms_may_cause">Current Delay is %1$dSetting this value to less than 1000ms may cause</string>
    <string name="wrong_attempts">" %1$d Wrong Attempts "</string>
    <string name="intrusion_detected">Intrusion Detected</string>
    <string name="premium_icon_buy_subscription">Premium Icon ,Buy Subscription</string>
    <string name="alramdes">If someone enters the wrong password, the alarm will start ringing.</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>


</resources>