<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:padding="@dimen/_10sdp"
    tools:context=".ui.onboarding.GettingStartedFragment">

    <LinearLayout
        android:id="@+id/splashContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/rectangle" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@null"
            android:src="@drawable/intrudericon" />

        <TextView
            android:id="@+id/textView"
            style="@style/SplashTitle"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/intruder_selfie" />

        <TextView
            style="@style/DescriptionTextSplash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/seewho" />
    </LinearLayout>


    <Button
        android:id="@+id/btnNext"
        style="@style/Button2"
        android:text="@string/get_started"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvPolicyTerms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPolicyTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:linksClickable="true"
        android:padding="@dimen/_10sdp"
        android:text="@string/policy_terms_html"
        android:textColor="@color/white"
        android:textColorLink="@color/dividerColor"
        android:textSize="12sp"
        ads:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        app:layout_constraintBottom_toBottomOf="parent"


        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentBottom="true"

        />


</androidx.constraintlayout.widget.ConstraintLayout>
