<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    app:cardCornerRadius="16dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="24dp">

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/close_btn" />

        <LinearLayout
            android:id="@+id/above"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/closeButton"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addTitle"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                style="@style/DescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Add_Widget" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fingerprintContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/above"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/blurbg" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/emptyicon" />
        </FrameLayout>

            <TextView
                android:layout_margin="5dp"
                android:id="@+id/text"
                android:layout_below="@id/fingerprintContainer"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howto" />
        <Button
            android:id="@+id/addWidget"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:text="@string/add_now" />





    </RelativeLayout>
</androidx.cardview.widget.CardView>
