<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_margin="2dp"
    app:cardElevation="8dp"

    app:cardBackgroundColor="@color/white"
    app:shapeAppearanceOverlay="@style/TopRoundedCard"
    app:useCompatPadding="true">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:padding="24dp"
     >

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="24dp"
            android:layout_height="24dp"

            android:layout_alignParentEnd="true"
            android:src="@drawable/close_btn"
            android:clickable="true"
            android:focusable="true" />
        <LinearLayout
            android:layout_below="@id/closeButton"
            android:id="@+id/above"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <TextView

                android:layout_margin="4dp"
                android:id="@+id/title"
                style="@style/widgetDialoTitle"
                android:textColor="@color/black"
                android:text="@string/alarmtitle"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/description"
                style="@style/dialogDes"
                android:text="@string/attempt"
                />



        </LinearLayout>



        <LinearLayout
            android:id="@+id/fingerprintContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/above"

            android:orientation="vertical"
            >


            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_centerInParent="true"
                android:layout_margin="20dp"
                android:src="@drawable/alramimg"
                />

        </LinearLayout>

        <Button
            android:id="@+id/addWidget"
            style="@style/Button"
            android:layout_below="@id/fingerprintContainer"
            android:text="@string/enable_now" />



    </RelativeLayout>



</com.google.android.material.card.MaterialCardView>
