<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBgColor"
    android:fitsSystemWindows="true">

    <!-- LOCKED CARD -->
    <androidx.cardview.widget.CardView

        android:id="@+id/lokcedCard"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <FrameLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/lockedImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/blurbg" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botttom_fade" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/vertical_spacing"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_12sdp"
                android:showDividers="middle">

                <ImageView
                    android:id="@+id/img"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/lockicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lockeImg"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textStyle="bold" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/watchAdBtn"
                    style="@style/transparentButton"
                    android:text="@string/watch_ad_to_unlock"
                    app:icon="@drawable/videoicon"
                    android:textAllCaps="false"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:iconTint="@null" />

                <LinearLayout

                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_weight="1"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="2dp"
                        android:background="@color/lineColor"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="OR"

                        android:textSize="12sp"
                        android:textColor="@color/white"/>
                    <View
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="2dp"
                        android:background="@color/lineColor"/>






                </LinearLayout>



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/premiumBtn"
                    style="@style/premiumButton"
                    android:text="@string/unlock_now"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:icon="@drawable/premiumicon"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:iconTint="@null" />


            </LinearLayout>

        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/unlockedCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Image -->
            <ImageView
                android:id="@+id/homeImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/blurbg" />

            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:background="@drawable/fadding_gradient" />

            <RelativeLayout
                android:id="@+id/intruderDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:padding="10dp">

                <TextView
                    android:id="@+id/detail"
                    style="@style/BoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail"
                    android:text="@string/date"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/date"
                    android:text="@string/time"
                    android:textColor="@color/white" />
            </RelativeLayout>

        </FrameLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
