<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBgColor"
    android:fitsSystemWindows="true"
    android:padding="20dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="70dp" />

    <TextView

        android:id="@+id/titleText"
        style="@style/PermissionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/permissions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/subtitlePerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/permdescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <androidx.viewpager2.widget.ViewPager2

        android:id="@+id/permissionPager"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toTopOf="@+id/allowPermissionbotnowBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/tabDots"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsColor="@color/white"
        app:dotsSize="8dp"
        app:dotsSpacing="5dp"
        app:dotsWidthFactor="3"
        app:layout_constraintBottom_toTopOf="@+id/allowPermissionbotnowBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissionPager"
        app:selectedDotColor="@color/dividerColor" />


    <Button
        android:id="@+id/allowPermissionbotnowBtn"
        style="@style/PermissionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/allow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
